<resources>
    <string name="available_balance_text">Available Balance</string>
    <string name="real_balance_text">Real Balance</string>
    <string name="touch_to_change_text">Touch to change</string>
    <string name="txt_total_balance_15_btc_text">15 BTC</string>
    <string name="txt_amount_btc_text">1.4 BTC</string>
    <string name="txt_conference_ticket_text">Conference ticket</string>
    <string name="notes">user notes</string>
    <string name="txt_time_date_text">03 Feb 2014</string>
    <string name="from">From Given Actor</string>
    <string name="new_user_text">New User</string>
    <string name="add_user_in_your_contact_list_text">Add user to your contact list or\nlook for it in the community section</string>
    <string name="cancel_text">Cancel</string>
    <string name="search_text">Search</string>
    <string name="matias_furszyfer_text">Matias Furszyfer</string>
    <string name="name_text">Name</string>
    <string name="address_text">Address</string>
    <string name="waiting_text">Waiting...</string>
    <string name="share_address_text">Share address</string>
    <string name="request_text">Request</string>
    <string name="send_text">Send</string>
    <string name="txt_title_text">Add Contact Help</string>
    <string name="no_id_In_this_wallet_text">This wallet allows two different types of contacts:</string>
    <string name="no_id_Users_of_other_text_Fermat_wallets">Users of other Fermat wallets: you don\'t need to manually exchange addresses with them</string>
    <string name="no_id_Users_of_other_text_wallets_outside">Users of other wallets outside Fermat: You need to exchange addresses manually</string>
    <string name="no_id_Select_below_which_text">Select below which type of contact you want to add:</string>
    <string name="no_id_dont_show_this_again_text">Don\'t show this again</string>
    <string name="add_fermat_user_text">Fermat Contact</string>
    <string name="add_extra_user_text">External Contact</string>
    <string name="create_external_contact_text">Create External Contact</string>
    <string name="set_name_text">Type name</string>
    <string name="set_address_text">Paste address</string>
    <string name="save_text">Save</string>
    <string name="fermat_network_offline_text">Fermat Network Offline</string>
    <string name="description_text">You are not connected to</string>
    <string name="second_description_text">the fermat network.</string>
    <string name="connect_text">Connect</string>
    <string name="txt_balance_amount_29_text">0.00</string>
    <string name="balance_amount_type_text">btc</string>
    <string name="click_me_to_search_text">Click on me\nto look for contacts!</string>
    <string name="receive_text">Receive</string>
    <string name="give_me_an_address_address_text">Give me an Address!</string>
    <string name="you_dont_have_transactions_received_text">You don\'t have\n any received transactions</string>
    <string name="you_dont_have_chunck_values">You don\'t have\n any Chunck Values yet</string>
    <string name="you_dont_have_chunck_datail_values">You don\'t have\n any spending of this Chunck yet</string>
    <string name="you_dont_have_transactions_sent_text">You don\'t have\n any transaction sent</string>
    <string name="balance_amount_0_bits_text">0 bits</string>
    <string name="notes_text">Notes</string>
    <string name="no_history_send_or_receive">No history\nsend or receive\nto fill this!!</string>
    <string name="Date_text">Date: </string>
    <string name="Note_text">Note: </string>
    <string name="To_text">To: </string>
    <string name="From_text">From: </string>
    <string name="confirmation_text">"You will sending Amount btc. Confirm?</string>
    <string name="header_text">Header</string>
    <string name="waiting_receive_text">Waiting for response</string>
    <string name="accepted_text">Accepted</string>
    <string name="deny_text">Deny</string>
    <string name="accept_text">Accept</string>
    <string name="Paid_text">Paid</string>
    <string name="Pending_response">Pending response</string>
    <string name="Error">Error</string>
    <string name="Not_sent_yet">Not sent yet</string>
    <string name="Payment_process_started">Payment process started</string>
    <string name="Denied_by_incompatibility">Denied by incompatibility</string>
    <string name="In_approving_process">In approving process</string>
    <string name="Error_contact_with_support">Error, contact with support</string>
    <string name="denied">Denied</string>
    <string name="Waiting_for_response">Waiting for response</string>
    <string name="no_transactions_text">No transactions</string>
    <string name="Total_earnings_lost">Total earnings and lost:</string>
    <string name="Today_text">Today: </string>
    <string name="Earned_text">earned</string>
    <string name="Lost_text">lost</string>
    <string name="No_data">No Data</string>
    <string name="reason_text">Reason</string>
    <string name="you_dont_have_requests_text">You don\'t have\n requests</string>
    <string name="send_request_text">Send Request</string>
    <string name="home_text">Home</string>
    <string name="you_need_an_identity_before_you_can_enter_text">You need an identity before\nyou can enter</string>
    <string name="create_text">Create</string>
    <string name="balance_amount_25_btc_text">25 btc</string>
    <string name="refuse_text">Refuse</string>
    <string name="welcome_text">Welcome!</string>
    <string name="this_is_a_loss_protected_wallet_text">This is a wallet that will allow you to protect against loss of money. It\s main features are:</string>
    <string name="close_text">Close</string>
    <string name="Whooops_text">Recovering from system error.</string>
    <string name="Whooops_text2">We have a problem here.</string>
    <string name="Whooops_text3">Whooops! recovering from system error In Graphic"</string>
    <string name="Recovering">Recovering from system error.</string>
    <string name="Insufficient_funds">Insufficient funds.</string>
    <string name="Wait_a_minute">Wait a minute please, trying to reconnect...</string>
    <string name="Contact_without_net_address">Contact don\'t have an Address from red</string>
    <string name="Contact_without_address">Contact don\'t have an Address</string>
    <string name="Contact_not_found">Contact not found, please add it.</string>
    <string name="Sending_text">Sending...</string>
    <string name="Action_not_allowed_lpw">Action not allowed, you will lose money. Restricted by LossProtected Configuration.</string>
    <string name="Send_error_text">Send Error.</string>
    <string name="Invalid_Amount_small">Invalid Amount, must be greater than</string>
    <string name="Invalid_Amount">Invalid Amount</string>
    <string name="Unexpected_error">Unexpected Error</string>
    <string name="Request_accepted">Request accepted</string>
    <string name="Request_denied">Request denied</string>
    <string name="Action_not_allowed2">Action not allowed.Could not retrieve the dollar exchange rate.\nCheck your internet connection.. </string>
    <string name="Cant_accept">Can\'t Accept or Denied Receive Payment Exception -</string>
    <string name="Error_spending_chart">Error Get SpendingList for Chart</string>
    <string name="lpw_notification_transaction_arrive_1">Received money</string>
    <string name="lpw_notification_transaction_arrive_2">BTC Arrived</string>
    <string name="lpw_notification_transaction_reverse_1">Sent Transaction reversed</string>
    <string name="lpw_notification_transaction_reverse_2">Sending</string>
    <string name="lpw_notification_transaction_reverse_3">BTC could not be completed.</string>
    <string name="lpw_notification_request_arrive_1">Received new Payment Request</string>
    <string name="lpw_notification_request_arrive_2">You have received a Payment Request, for</string>
    <string name="lpw_notification_payment_denied_1">Payment Request deny</string>
    <string name="lpw_notification_payment_denied_2">Your Payment Request, for </string>
    <string name="lpw_notification_payment_denied_3">BTC was deny.</string>
    <string name="lpw_notification_payment_error_1">Payment Request reverted</string>
    <string name="lpw_notification_payment_error_2">Your Payment Request, for </string>
    <string name="lpw_notification_payment_error_3">BTC was reverted.</string>
    <string name="Enabled_notificacions">Enabled Notifications</string>
    <string name="Enabled_loss_protected">Enabled Loss Protected</string>
    <string name="Select_network">Select Network</string>
    <string name="Received_Testnet_Bitcoins">Received Testnet Bitcoins</string>
    <string name="TestNet_download">"TestNet download Init"</string>
    <string name="TestNet_bitcoin_arrived">TestNet bitcoin arrived</string>
    <string name="TestNet_Request_Error">TestNet Request Error</string>
    <string name="to_begin_choose_an_avatar_below_text">To begin, choose an avatar below. You might change it later with any picture and your own alias.</string>
    <string name="be_john_doe_text">Be John Doe</string>
    <string name="be_jane_doe__text">Be Jane Doe</string>
    <string name="back_text">Back</string>
    <string name="mnrr3141fa124_text">mnrr3141fa124</string>
    <string name="footer_message_text">Footer Message</string>
    <string name="loading_text">Loading..........</string>
    <string name="confirm_request_text">Confirm request</string>
    <string name="enter_name_here_text">Enter name here</string>
    <string name="bits_text">[bits]</string>
    <string name="btc_text">[btc]</string>
    <string name="balance_amount_0_text">0</string>
    <string name="amount_text">Amount</string>
    <string name="fee_amount_text">Fee</string>
    <string name="fee_option_text">Substract Fee from Amount</string>
    <string name="fee_advances_text">Advanced configuration</string>
    <string name="title_Fee">Fee Level Settings</string>
    <string name="fee_low">Slow</string>
    <string name="fee_Medium">Normal</string>
    <string name="fee_High">Fast</string>
    <string name="empty_transactions_text">Empty transactions</string>
    <string name="txtLastTransactions_text">Last transactions</string>
    <string name="no_id_pipe_text">|</string>
    <string name="txtSeeAlltransactions_text">See all</string>
    <string name="txtViewTitleTransaction_text">Transaccion hacia Starbuck 480 btc</string>
    <string name="txtViewDetailTransaction_text">Taza de café</string>
    <string name="name_prefix_text">name prefix</string>
    <string name="middle_name_text">middle name</string>
    <string name="last_name_text">last name</string>
    <string name="name_suffix_text">name suffix</string>
    <string name="alias_text">alias suffix</string>
    <string name="type_text">type</string>
    <string name="swype_refresh">Swype down to refresh</string>
    <string name="search_contacts_hint">Search contacts...</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_share">Share</string>
    <string name="action_view_type">View Type</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="action_disable">Disable / Enable</string>
    <string name="action_edit">Edit</string>
    <string name="action_wallet_store">Wallet Store</string>
    <string name="title_section1">Luis Fernando Molina</string>
    <string name="title_section2">Contacts</string>
    <string name="app_name">Fermat Loss Protected Wallet</string>
    <string name="accept_btn">Accept</string>
    <string name="cancel_btn">Cancel</string>
    <string name="confirm_text">Action not allowed, you will lose money.\n Do you really want to continue?</string>
    <string name="see_your_loss_balance_text">* Checking your available balance based on the actual exchange rate.\n* See the quote dollar today.\n* Sending/receiving bitcoins.</string>
</resources>