<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="400sp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/confirm_text"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/confirm_text"
            android:textColor="#1d1d26"
            android:layout_alignBottom="@+id/back_btn"
            android:visibility="invisible"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="100dp" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="100dp">



            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#DC5A0F"
                android:text="@string/cancel_btn"
                android:textColor="#FFFFFF"
                android:layout_weight="1" />
            <Button
                android:id="@+id/accept_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#073487"
                android:text="@string/accept_btn"
                android:textColor="#FFFFFF"
                android:layout_weight="1" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>