<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="400sp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/mnrr3141fa124_text"
            android:textColor="#000000"
            android:layout_alignBottom="@+id/request_btn"
            android:visibility="invisible"/>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:id="@+id/imageView_qr_code"
                android:src="@drawable/qr_code"
                android:layout_alignBottom="@+id/string_address" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/share_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/action_share"
                android:background="#073487"
                android:textColor="#FFFFFF"
                android:layout_weight="1" />

            <Button
                android:id="@+id/back_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#DC5A0F"
                android:text="@string/back_text"
                android:textColor="#FFFFFF"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>