<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#ffffff">

    <View
        android:layout_width="match_parent"
        android:layout_height="4.5dp"
        android:background="#DC5A0F"
        android:fitsSystemWindows="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">

            <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingTop="2dp"
                android:layout_gravity="center"
                android:text="@string/welcome_text"
                android:textSize="20sp"
                android:textColor="#073487"
                app:typeface="CAVIAR_DREAMS_BOLD"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:paddingTop="1dp"
                android:paddingBottom="7dp"
                android:src="@drawable/lpw_icon"
                android:contentDescription="@string/app_name"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:background="#073487" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:adjustViewBounds="true"
            android:src="@drawable/banner_loss"
            android:contentDescription="@string/app_name"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/this_is_a_loss_protected_wallet_text"
            android:textSize="14sp"
            android:textColor="#1d1d26"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#073487" />

        <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/see_your_loss_balance_text"
            android:textSize="12sp"
            android:textColor="#1d1d26"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:background="#073487" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkbox_not_show"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:checked="true"
                android:buttonTint="#1d1d26"
                android:focusable="false"
                />

            <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/no_id_dont_show_this_again_text"
                android:textColor="#073487"
                android:textSize="12sp"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </LinearLayout>

        <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatButton
            android:id="@+id/btn_dismiss"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:text="@string/close_text"
            android:background="#DC5A0F"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

    </LinearLayout>

</LinearLayout>


