<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_blue_gradient_color">
        <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/fermat_network_offline_text"
            android:textColor="#fff"
            android:textSize="17sp"
            tools:ignore="HardcodedText"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:gravity="center"
            android:background="@drawable/header_bg_gradient_color">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:src="@drawable/icon_network_fermat"
                tools:ignore="ContentDescription"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </LinearLayout>



        <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:text="@string/description_text"
            android:textColor="#000000"
            android:textSize="15sp"
            tools:ignore="HardcodedText"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
            android:id="@+id/second_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:text="@string/second_description_text"
            android:textColor="#000000"
            android:textSize="15sp"
            tools:ignore="HardcodedText"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#e1e1e1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
                android:id="@+id/negative_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:padding="12dp"
                android:singleLine="true"
                android:text="@string/cancel_text"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="15sp"
                tools:ignore="HardcodedText"
                android:focusable="false"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#e1e1e1" />

            <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
                android:id="@+id/positive_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:padding="15dp"
                android:singleLine="true"
                android:text="@string/connect_text"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="14sp"
                tools:ignore="HardcodedText"
                android:focusable="false"
               />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
