<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="220dp"
        android:layout_height="330dp"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <com.bitdubai.fermat_android_api.ui.Views.CircularProgressBar
            android:id="@+id/progress"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:scaleType="matrix"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            />

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:layout_marginLeft="10dp"
            android:paddingBottom="7dp">


            <RelativeLayout
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:paddingRight="28dp">

                <!-- TODO: Update blank fragment layout -->
                <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/txt_balance_amount_29_text"
                    android:textSize="28sp"
                    android:textColor="#FFF"
                    android:id="@+id/txt_balance_amount"
                    android:textStyle="bold"
                    app:typeface="ROBOTO_REGULAR"
                    android:textIsSelectable="false"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/txt_balance_amount_type" />

                <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/balance_amount_type_text"
                    android:id="@+id/txt_balance_amount_type"
                    android:textColor="#05ddd2"
                    android:layout_marginLeft="2dp"
                    app:typeface="ROBOTO_REGULAR"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/txt_type_balance"
                android:text="@string/available_balance_text"
                android:textSize="14sp"
                android:textColor="#05ddd2"
                android:textStyle="italic"
                app:typeface="ROBOTO_REGULAR"
                />

            <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/touch_to_change_text"
                android:textSize="12sp"
                android:id="@+id/txt_touch_to_change"
                android:textColor="#aeb6c6"
                android:textStyle="italic"
                app:typeface="ROBOTO_REGULAR"
                />
            <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="1 BTC - 400 USD"
                android:textSize="13sp"
                android:id="@+id/txt_exchange_rate"
                android:textColor="#aeb6c6"
                android:textStyle="italic"
                app:typeface="ROBOTO_REGULAR"
                />
        </LinearLayout>

    </FrameLayout>

</RelativeLayout>
